syntax = "proto3";

package go.micro.srv.user;

import "models.proto";

service User {
	rpc UserLogin(UserLoginRequest) returns (UserLoginResponse);
}

message UserLoginRequest {
    string user_id = 1;
    string password = 2;
}

message UserLoginResponse {
    int32 code = 1;
    repeated UserInfo user_info = 2;
}